--- a/linux/.config/i3/i3blocks.conf
+++ b/linux/.config/i3/i3blocks.conf
@@ -45,10 +45,10 @@ command=/usr/share/i3blocks/volume 5 pulse
 # Memory usage
 #
 # The type defaults to "mem" if the instance is not specified.
-[memory]
-label=MEM
-separator=false
-interval=30
+# [memory]
+# label=MEM
+# separator=false
+# interval=30
 
 # [memory]
 # label=SWAP
@@ -62,9 +62,9 @@ interval=30
 # The script may be called with a optional argument to set the alert
 # (defaults to 10 for 10%).
 [disk]
-label=HOME
+label=FREE SPACE
 #instance=/mnt/data
-interval=30
+interval=3
 
 # Network interface monitoring
 #
@@ -91,12 +91,12 @@ interval=5
 # see the script for details.
 [cpu_usage]
 label=CPU
-interval=10
+interval=3
 min_width=CPU: 100.00%
 #separator=false
 
-[load_average]
-interval=10
+# [load_average]
+# interval=10
 
 # Battery indicator
 #
@@ -144,10 +144,10 @@ interval=1
 #
 # bindsym --release Caps_Lock exec pkill -SIGRTMIN+11 i3blocks
 # bindsym --release Num_Lock  exec pkill -SIGRTMIN+11 i3blocks
-#[keyindicator]
-#instance=CAPS
-#interval=once
-#signal=11
+[keyindicator]
+instance=CAPS
+interval=1
+signal=11
 
 #[keyindicator]
 #instance=NUM
