--- a/linux/.config/i3/i3blocks.conf
+++ b/linux/.config/i3/i3blocks.conf
@@ -61,10 +61,10 @@ command=/usr/share/i3blocks/volume 5 pulse
 # The directory defaults to $HOME if the instance is not specified.
 # The script may be called with a optional argument to set the alert
 # (defaults to 10 for 10%).
-[disk]
-label=FREE SPACE
+# [disk]
+# label=FREE SPACE
 #instance=/mnt/data
-interval=3
+# interval=3
 
 # Network interface monitoring
 #
@@ -77,13 +77,13 @@ interval=3
 # separator=false
 
 [wifi]
-#instance=wlp3s0
+# instance=wlp3s0
 interval=10
 separator=false
 
 [bandwidth]
-#instance=eth0
-interval=5
+# instance=eth0
+interval=1
 
 # CPU usage
 #
@@ -91,7 +91,7 @@ interval=5
 # see the script for details.
 [cpu_usage]
 label=CPU
-interval=3
+interval=1
 min_width=CPU: 100.00%
 #separator=false
 
@@ -102,16 +102,16 @@ min_width=CPU: 100.00%
 #
 # The battery instance defaults to 0.
 [battery]
-label=BAT
-#label=⚡
+# label=BAT
+label=⚡
 #instance=1
-interval=30
+interval=3
 
 # Date Time
 #
 [time]
 # command=date '+%Y-%m-%d %H:%M:%S'
-command=date '+%d-%m-%Y %H:%M:%S'
+command=date '+%d-%m-%Y %H:%M'
 interval=1
 
 # Generic media player support
