--- a/linux/.config/i3/i3blocks.conf
+++ b/linux/.config/i3/i3blocks.conf
@@ -134,9 +134,10 @@ interval=1
 # Support multiple chips, though lm-sensors.
 # The script may be called with -w and -c switches to specify thresholds,
 # see the script for details.
-#[temperature]
-#label=TEMP
-#interval=10
+# [temperature]
+# label=
+# label=TEMP
+# interval=3
 
 # Key indicators
 #
