Added `dunst`, `gadd.sh` and scratchpad for terminal. Dnust: a notification manager and related config files added. Also modified .profile, added .alias and .bash_profile and some minor changes. Also added subdirectory "T480" for machine specific files.

--- a/linux/T480/.config/i3/i3blocks.conf
+++ b/linux/T480/.config/i3/i3blocks.conf
@@ -76,14 +76,14 @@ command=/usr/share/i3blocks/volume 5 pulse
 # interval=10
 # separator=false
 
-[wifi]
+# [wifi]
 # instance=wlp3s0
-interval=10
-separator=false
+# interval=10
+# separator=false
 
 [bandwidth]
 # instance=eth0
-interval=1
+interval=3
 
 # CPU usage
 #
@@ -93,7 +93,7 @@ interval=1
 label=CPU
 interval=1
 min_width=CPU: 100.00%
-#separator=false
+# separator=false
 
 # [load_average]
 # interval=10
@@ -110,8 +110,9 @@ interval=3
 # Date Time
 #
 [time]
-# command=date '+%Y-%m-%d %H:%M:%S'
-command=date '+%d-%m-%Y %H:%M'
+# command=date '+%d-%m-%Y %H:%M'
+command=echo "`date +'%a'`, `date +'%b %d'`  `date +'%H:%M'`"
+# command=echo "`date +'%a %d %b'` <b>`date +'%T'`</b> "; [[ -z "${BLOCK_BUTTON}" ]] || gsimplecal &
 interval=1
 
 # Generic media player support
@@ -147,10 +148,10 @@ interval=1
 # bindsym --release Num_Lock  exec pkill -SIGRTMIN+11 i3blocks
 [keyindicator]
 instance=CAPS
-interval=1
+interval=once
 signal=11
 
-#[keyindicator]
-#instance=NUM
-#interval=once
-#signal=11
+[keyindicator]
+instance=NUM
+interval=once
+signal=11
