--- a/linux/T480/.config/i3/config
+++ b/linux/T480/.config/i3/config
@@ -1,5 +1,6 @@
 
-set $term --no-startup-id exec i3-sensible-terminal
+# set $term --no-startup-id exec i3-sensible-terminal
+set $term --no-startup-id $TERMINAL
 
 # bindsym $mod+Shift+Return	exec --no-startup-id samedir
 
@@ -18,7 +19,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:DejaVu Sans Mono 10
+font pango:DejaVu Sans Mono 10.5
 
 # Before i3 v4.8, we used to recommend this one as the default:
 # font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
@@ -32,6 +33,7 @@ floating_modifier $mod
 
 # start a terminal
 bindsym $mod+Return exec $term
+bindsym $mod+KP_Enter exec $term
 
 # kill focused window with confirmation
 set $close "Close the window? (y/n)"
@@ -39,6 +41,7 @@ set $close "Close the window? (y/n)"
 mode $close {
     bindsym y kill, mode default
     bindsym Return kill, mode default
+    bindsym KP_Enter kill, mode default
 
     bindsym n mode default
     bindsym Escape mode default
@@ -51,14 +54,13 @@ bindsym $mod+q mode $close
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
 bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
+bindsym $mod+Shift+d exec dolphin
 
 # change focus
 bindsym $mod+h focus left
 bindsym $mod+j focus down
 bindsym $mod+k focus up
 bindsym $mod+l focus right
-
-# alternatively, you can use the cursor keys:
 bindsym $mod+Left focus left
 bindsym $mod+Down focus down
 bindsym $mod+Up focus up
@@ -69,18 +71,20 @@ bindsym $mod+Shift+h move left
 bindsym $mod+Shift+j move down
 bindsym $mod+Shift+k move up
 bindsym $mod+Shift+l move right
-
-# alternatively, you can use the cursor keys:
 bindsym $mod+Shift+Left move left
 bindsym $mod+Shift+Down move down
 bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
-# split in horizontal orientation
-# bindsym $mod+h split h
-
-# split in vertical orientation
-# bindsym $mod+v split v
+# Move current workspace to monitors.
+bindsym $mod+Ctrl+Left		move workspace to output left
+bindsym $mod+Ctrl+Down		move workspace to output down
+bindsym $mod+Ctrl+Up		move workspace to output up
+bindsym $mod+Ctrl+Right		move workspace to output right
+bindsym $mod+Ctrl+h		move workspace to output left
+bindsym $mod+Ctrl+j		move workspace to output down
+bindsym $mod+Ctrl+k		move workspace to output up
+bindsym $mod+Ctrl+l		move workspace to output right
 
 bindsym $mod+t split toggle
 
@@ -113,19 +117,30 @@ set $ws6 "6"
 set $ws7 "7"
 set $ws8 "8"
 set $ws9 "9"
-set $ws0 "10: "
+# set $ws0 "10: "
+set $ws0 "10"
 
 # switch to workspace
 bindsym $mod+1 workspace $ws1
+bindsym $mod+Mod2+KP_1 workspace $ws1
 bindsym $mod+2 workspace $ws2
+bindsym $mod+Mod2+KP_2 workspace $ws2
 bindsym $mod+3 workspace $ws3
+bindsym $mod+Mod2+KP_3 workspace $ws3
 bindsym $mod+4 workspace $ws4
+bindsym $mod+Mod2+KP_4 workspace $ws4
 bindsym $mod+5 workspace $ws5
+bindsym $mod+Mod2+KP_5 workspace $ws5
 bindsym $mod+6 workspace $ws6
+bindsym $mod+Mod2+KP_6 workspace $ws6
 bindsym $mod+7 workspace $ws7
+bindsym $mod+Mod2+KP_7 workspace $ws7
 bindsym $mod+8 workspace $ws8
+bindsym $mod+Mod2+KP_8 workspace $ws8
 bindsym $mod+9 workspace $ws9
+bindsym $mod+Mod2+KP_9 workspace $ws9
 bindsym $mod+0 workspace $ws0
+bindsym $mod+Mod2+KP_0 workspace $ws0
 
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace $ws1
@@ -139,10 +154,41 @@ bindsym $mod+Shift+8 move container to workspace $ws8
 bindsym $mod+Shift+9 move container to workspace $ws9
 bindsym $mod+Shift+0 move container to workspace $ws0
 
+# Separate workspaces on monitors.
+workspace $ws1 output eDP1
+workspace $ws2 output eDP1
+workspace $ws3 output eDP1
+workspace $ws4 output eDP1
+workspace $ws5 output eDP1
+workspace $ws6 output HDMI2
+workspace $ws7 output HDMI2
+workspace $ws8 output HDMI2
+workspace $ws9 output HDMI2
+workspace $ws0 output HDMI2
+
+exec --no-startup-id parcellite
 # open applications on startup. Find class of an application with `xprop`
 # assign [class="Thunderbird"] $ws0       # `assign` doesn't work with some applications like Thunderbird. Alternative method to do this:
 for_window [class="Thunderbird"] move to workspace $ws0
 exec --no-startup-id thunderbird
+for_window [class="Gsimplecal"] floating enable, move down 10 px
+
+# Scratchpad with dropdown terminal. Not a very good choice to use `konsole` for
+# this purpose. Order may matter, although not tested.
+
+for_window [class="^konsole$" title="^dropdown"] move scratchpad
+exec --no-startup-id konsole -p tabtitle="dropdown"
+for_window [class="^konsole$" title="^dropdown"] floating enable
+for_window [class="^konsole$" title="^dropdown"] move scratchpad
+for_window [class="^konsole$" title="^dropdown"] scratchpad show
+for_window [class="^konsole$" title="^dropdown"] resize set 1800 700
+for_window [class="^konsole$" title="^dropdown"] scratchpad show
+
+bindsym F12 [class="^konsole$" title="^dropdown"] scratchpad show; move position center
+bindsym $mod+F12 exec --no-startup-id konsole -p tabtitle="dropdown"; [class="^konsole$" title="^dropdown"] scratchpad show
+bindsym $mod+shift+minus move scratchpad
+bindsym $mod+minus scratchpad show
+
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -159,16 +205,15 @@ mode "resize" {
         # Pressing right will grow the window’s width.
         # Pressing up will shrink the window’s height.
         # Pressing down will grow the window’s height.
-        bindsym h resize shrink width 5 px or 5 ppt
-        bindsym j resize grow height 5 px or 5 ppt
-        bindsym k resize shrink height 5 px or 5 ppt
-        bindsym l resize grow width 5 px or 5 ppt
+        bindsym Left resize shrink width 10 px or 10 ppt
+        bindsym Down resize grow height 10 px or 10 ppt
+        bindsym Up resize shrink height 10 px or 10 ppt
+        bindsym Right resize grow width 10 px or 10 ppt
 
-        # same bindings, but for the arrow keys
-        bindsym Left resize shrink width 5 px or 5 ppt
-        bindsym Down resize grow height 5 px or 5 ppt
-        bindsym Up resize shrink height 5 px or 5 ppt
-        bindsym Right resize grow width 5 px or 5 ppt
+        bindsym h resize shrink width 10 px or 10 ppt
+        bindsym j resize grow height 10 px or 10 ppt
+        bindsym k resize shrink height 10 px or 10 ppt
+        bindsym l resize grow width 10 px or 10 ppt
 
         # back to normal: Enter or Escape
         bindsym Return mode "default"
@@ -180,6 +225,7 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
+
         position top
         status_command i3blocks -c ~/.config/i3/i3blocks.conf
 }
@@ -194,8 +240,8 @@ bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% #d
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle # mute sound
 
 # Sreen brightness controls
-bindsym XF86MonBrightnessUp exec xbacklight -inc 10 # increase screen brightness
-bindsym XF86MonBrightnessDown exec xbacklight -dec 10 # decrease screen brightness
+bindsym XF86MonBrightnessUp exec xbacklight -inc 20 # increase screen brightness
+bindsym XF86MonBrightnessDown exec xbacklight -dec 20 # decrease screen brightness
 
 # Touchpad controls
 bindsym XF86TouchpadToggle exec ~/.config/i3/toggletouchpad.sh # toggle touchpad
@@ -211,7 +257,8 @@ set $inactive-bg-color   #2f343f
 set $text-color          #f3f4f5
 set $inactive-text-color #676E7D
 set $urgent-bg-color     #E53935
-# 
+set $black               #000000
+#
 # # window colors
 # #                       border              background         text                 indicator
 # client.focused          $bg-color           $bg-color          $text-color          #00ff00
@@ -222,22 +269,29 @@ set $urgent-bg-color     #E53935
 
 # Always bind `Control+q` to something. If not binded and pressed by mistake, all
 # sessions of firefox will be killed which is ultra annoying.
-bindsym Control+q exec i3lock --color "$bg-color"
+bindsym Control+q exec i3lock -f --color "$bg-color"
+# bindsym Control+q exec i3lock -i $(find /home/chinmay/Pictures/wallpapers -type f \(-iname \*.png \) | shuf -n1)       #Need to setup for different monitors. Also only .png, no other.
+# bindsym Control+q exec i3lock -i $(find ~/Pictures/wallpapers -iname *.png | shuf -n1)
+
+# Suspend system to RAM and lock screen on wake up.
+bindsym Control+Shift+q exec i3lock -f --color "$black" && echo mem > /sys/power/state
 
 bindsym $mod+Shift+Tab			workspace prev
 bindsym $mod+Tab			workspace next
 
 bindsym $mod+F2 exec firefox
+bindsym $mod+Shift+F2 exec firefox -private-window
 
 bindsym $mod+Shift+Delete exec $term -e htop
 
 # resolution for monitors
+exec_always xrandr --auto
 exec_always xrandr | grep 'HDMI2 connected' && xrandr --output VIRTUAL1 --off --output eDP1 --mode 1368x768 --pos 0x184 --rotate normal --output DP1 --off --output HDMI2 --primary --mode 1920x1080 --pos 1368x0 --rotate normal --output HDMI1 --off --output DP2 --off
 
 exec_always xrandr | grep 'HDMI2 disconnected' && xrandr --output VIRTUAL1 --off --output eDP1 --mode 1920x1080 --pos 0x0 --rotate normal --output DP1 --off --output HDMI2 --off --output HDMI1 --off --output DP2 --off
 
-# for showing wifi connections in bar
-exec nm-applet
+# for showing wifi settings on startup in i3bar
+exec --no-startup-id nm-applet
 
 # Turnoff touchpad. Use `xinput` to see all inputs. To enable, set it to 1. Put
 # this in i3 config, not .bashrc as for floating wm for my Kubuntu, a script automatically
@@ -250,18 +304,29 @@ exec --no-startup-id xinput set-prop "SynPS/2 Synaptics TouchPad" "Device Enable
 # compton - composite manager for i3
 exec --no-startup-id compton --config ~/.config/compton/compton.conf -b
 
+
+# exec killall -q /usr/lib/cups/notifier/dbus
+# exec --no-startup-id dunst
+exec killall -q notify-osd
+exec --no-startup-id dunst -config ~/.config/dunst/dunstrc
+
 exec XDG_CURRENT_DESKTOP=KDE
 
 exec redshift -O 4500
 
 # wallpaper
-# exec_always feh --bg-scale ~/Pictures/Wallpapers/wallpaper3.jpg
-exec_always feh --randomize --bg-scale ~/Pictures/Wallpapers/wallpapers/Landscapes/
+exec feh --recursive --randomize --bg-scale ~/Pictures/wallpapers/
+bindsym $mod+Shift+a exec feh --recursive --randomize --bg-scale ~/Pictures/wallpapers/
 
 #interactive screenshot by pressing printscreen
 bindsym Print exec gnome-screenshot -i
 #crop-area screenshot by pressing Mod + printscreen
 bindsym $mod+Print exec gnome-screenshot -a
+
+# CAPS and NUM will start only once in i3bar but will send event everytime toggled.
+bindsym --release Caps_Lock exec pkill -SIGRTMIN+11 i3blocks
+bindsym --release Num_Lock  exec pkill -SIGRTMIN+11 i3blocks
+
 
 #############################
 ### settings for i3-gaps: ###
@@ -286,8 +351,6 @@ bindsym $mod+Shift+z	gaps outer current minus 5
 bindsym $mod+x			gaps inner current plus 5
 bindsym $mod+Shift+x		gaps inner current minus 5
 
-# Set to default 
-bindsym $mod+Shift+t		gaps inner current set 15; gaps outer current set 15
-
-# No gaps (almost fullscreen)
-bindsym $mod+f		gaps inner current set 0; gaps outer current set 1
+# No gaps (almost fullscreen) and set to default gaps.
+bindsym $mod+f		gaps inner current set 0; gaps outer current set 0
+bindsym $mod+Shift+f		gaps inner current set 15; gaps outer current set 15
