--- a/linux/T480/.config/compton/compton.conf
+++ b/linux/T480/.config/compton/compton.conf
@@ -20,11 +20,11 @@ shadow-offset-x = -7;		        # The left offset for shadows (default -15)
 shadow-offset-y = -7;		        # The top offset for shadows (default -15)
 
 # Fading transitions
-# fading = true; 			            # Fade windows during opacity changes
-# fade-delta = 5; 		            # The time between steps in a fade in milliseconds (default 10)
-# fade-in-step = 0.03; 		        # Opacity change between steps while fading in (default 0.028)
-# fade-out-step = 0.03; 		      # Opacity change between steps while fading out (default 0.03)
-#no-fading-openclose = true; 	  # Fade windows in/out when opening/closing
+fading = true; 			            # Fade windows during opacity changes
+fade-delta = 5; 		            # The time between steps in a fade in milliseconds (default 10)
+fade-in-step = 0.03; 		        # Opacity change between steps while fading in (default 0.028)
+fade-out-step = 0.03; 		      # Opacity change between steps while fading out (default 0.03)
+no-fading-openclose = true; 	  # Fade windows in/out when opening/closing
 
 # Prevents opacity being ignored for some apps
 detect-client-opacity = true; 
