--- a/linux/T480/.config/i3/i3blocks.conf
+++ b/linux/T480/.config/i3/i3blocks.conf
@@ -93,7 +93,18 @@ interval=3
 label=CPU
 interval=1
 min_width=CPU: 100.00%
-# separator=false
+
+separator=false
+
+# Temperature
+#
+# Support multiple chips, though lm-sensors.
+# The script may be called with -w and -c switches to specify thresholds,
+# see the script for details.
+[temperature]
+label=
+# label=TEMP
+interval=3
 
 # [load_average]
 # interval=10
@@ -129,16 +140,6 @@ interval=1
 # Support multiple VPN, with colors.
 #[openvpn]
 #interval=20
-
-# Temperature
-#
-# Support multiple chips, though lm-sensors.
-# The script may be called with -w and -c switches to specify thresholds,
-# see the script for details.
-# [temperature]
-# label=
-# label=TEMP
-# interval=3
 
 # Key indicators
 #
