--- a/linux/T480/.config/i3/config
+++ b/linux/T480/.config/i3/config
@@ -280,13 +280,13 @@ set $black               #000000
 
 # Always bind `Control+q` to something. If not binded and pressed by mistake, all
 # sessions of firefox will be killed which is ultra annoying.
-bindsym Control+q exec lock.sh
+bindsym Control+q exec blur_lock.sh
 # bindsym Control+q exec i3lock -ef --color "$bg-color" && xset dpms 5
 # bindsym Control+q exec i3lock -ei $(find /home/chinmay/Pictures/wallpapers -type f \(-iname \*.png \) | shuf -n1)       #Need to setup for different monitors. Also only .png, no other.
 # bindsym Control+q exec i3lock -ei $(find $HOME/Pictures/wallpapers -iname *.png | shuf -n1)
 
 # Suspend system to RAM and lock screen on wake up.
-bindsym Control+Shift+q exec lock.sh && echo mem > /sys/power/state
+bindsym Control+Shift+q exec blur_lock.sh && echo mem > /sys/power/state
 
 bindsym $mod+Shift+Tab			workspace prev
 bindsym $mod+Tab			workspace next
@@ -326,7 +326,7 @@ exec --no-startup-id dunst -config $HOME/.config/dunst/dunstrc
 
 exec XDG_CURRENT_DESKTOP=KDE
 
-exec redshift -O 4500
+exec redshift -O 3700
 
 # wallpaper
 exec feh --recursive --randomize --bg-scale $HOME/Pictures/wallpapers/
