--- a/linux/X230/.config/i3/config
+++ b/linux/X230/.config/i3/config
@@ -227,8 +227,19 @@ bindsym $mod+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-bar {
 
+bar {
+# Reference for colors: https://i3wm.org/docs/userguide.html#_colors
+ colors {
+        background #000000
+        statusline #00A5FF #that neon blue
+        separator #ffffff
+
+        focused_workspace  #4c7899 #285577 #ffffff
+        active_workspace   #333333 #5f676a #ffffff
+        inactive_workspace #333333 #222222 #888888
+        urgent_workspace   #2f343a #900000 #ffffff
+    }
         position top
         font pango:PowerlineFont 9
         # status_command python /usr/local/lib/python3.6/dist-packages/powerline/bindings/i3/powerline-i3.py
