--- a/linux/T480/.config/i3/config
+++ b/linux/T480/.config/i3/config
@@ -178,6 +178,7 @@ for_window [class="Thunderbird"] move to workspace $ws0
 exec thunderbird
 for_window [class="Gsimplecal"] floating enable, move down 10 px
 for_window [class="SystemView"] move to workspace $ws6
+for_window [class="dolphin"] floating enable, resize set 1400 750, move position center
 
 # Scratchpad with dropdown terminal. Not a very good choice to use `konsole` for
 # this purpose. Order may matter, although not tested.
@@ -200,6 +201,8 @@ bindsym $mod+shift+minus move scratchpad
 bindsym $mod+minus [class="^(?!konsole$)"] scratchpad show
 # bindsym $mod+minus [title="^(?!dropdown*$)"] scratchpad show
 
+# Toggle wifi on and off
+bindsym $mod+Escape exec wifi_toggle.sh
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -232,6 +235,12 @@ mode "resize" {
 }
 
 bindsym $mod+r mode "resize"
+
+# Alternate to resize without using resize mode.
+bindsym $mod+y resize shrink width 10 px or 10 ppt
+bindsym $mod+u resize grow height 10 px or 10 ppt
+bindsym $mod+i resize shrink height 10 px or 10 ppt
+bindsym $mod+o resize grow width 10 px or 10 ppt
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
@@ -324,6 +333,8 @@ exec --no-startup-id compton --config $HOME/.config/compton/compton.conf -b
 # exec --no-startup-id dunst
 exec killall -q notify-osd
 exec --no-startup-id dunst -config $HOME/.config/dunst/dunstrc
+
+bindsym $mod+grave exec focus_window.sh
 
 exec XDG_CURRENT_DESKTOP=KDE
 
