--- a/linux/T480/.config/i3/config
+++ b/linux/T480/.config/i3/config
@@ -237,10 +237,10 @@ mode "resize" {
 bindsym $mod+r mode "resize"
 
 # Alternate to resize without using resize mode.
-bindsym $mod+u resize shrink width 10 px or 10 ppt
-bindsym $mod+i resize grow height 10 px or 10 ppt
-bindsym $mod+o resize shrink height 10 px or 10 ppt
-bindsym $mod+p resize grow width 10 px or 10 ppt
+bindsym $mod+y resize shrink width 10 px or 10 ppt
+bindsym $mod+u resize grow height 10 px or 10 ppt
+bindsym $mod+i resize shrink height 10 px or 10 ppt
+bindsym $mod+o resize grow width 10 px or 10 ppt
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
@@ -364,7 +364,7 @@ bindsym --release Num_Lock  exec pkill -SIGRTMIN+11 i3blocks
 for_window [class=".*"] border pixel 4
 # Set inner/outer gaps
 gaps inner 20
-gaps outer 8
+gaps outer 5
 
 # Activate smart borders (always). No borders for single window but borders for
 # multiple windows
@@ -379,4 +379,4 @@ bindsym $mod+Shift+x		gaps inner current minus 5
 
 # No gaps (almost fullscreen) and set to default gaps.
 bindsym $mod+f		gaps inner current set 0; gaps outer current set 0
-bindsym $mod+Shift+f		gaps inner current set 20; gaps outer current set 8
+bindsym $mod+Shift+f		gaps inner current set 20; gaps outer current set 5
