T480: configured `gitconfig` to also use a global gitignore.
Signed-off-by: Chinmay Chhajed <chinmay.chhajed@espressif.com>

--- a/linux/T480/.gitconfig
+++ b/linux/T480/.gitconfig
@@ -25,3 +25,6 @@
     pulll = "!pull_with_progress() { git pull --progress \"$@\"; }; pull_with_progress"
 [credential]
     helper = cache --timeout=99999999999999999
+[core]
+        ; Don't use `$HOME` here!
+	excludesfile = ~/.gitignore
