T480: Minor changes.         - i3config: changed wifi toggle shortcut key.
Signed-off-by: Chinmay Chhajed <chinmay.chhajed@espressif.com>

--- a/linux/T480/.config/i3/config
+++ b/linux/T480/.config/i3/config
@@ -205,7 +205,7 @@ bindsym $mod+shift+i [class="^URxvt$" title="^(?!dropdown$)"] scratchpad show
 # bindsym $mod+minus [title="^(?!dropdown*$)"] scratchpad show
 
 # Toggle wifi on and off
-bindsym $mod+Escape exec wifi_toggle.sh
+bindsym $mod+Shift+Escape exec wifi_toggle.sh
 
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
