--- a/linux/T480/.config/i3/config
+++ b/linux/T480/.config/i3/config
@@ -207,8 +207,6 @@ bindsym $mod+shift+i [class="^URxvt$" title="^(?!dropdown$)"] scratchpad show
 # Toggle wifi on and off
 bindsym $mod+Escape exec wifi_toggle.sh
 
-# reload the configuration file
-bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
@@ -342,6 +340,10 @@ bindsym $mod+grave exec focus_window.sh
 exec XDG_CURRENT_DESKTOP=KDE
 
 exec redshift -O 3700
+
+# Transparency.
+bindsym $mod+c exec trans_dec.sh
+bindsym $mod+shift+c exec trans_inc.sh
 
 # wallpaper
 exec new_wall.sh
