--- a/linux/T480/.gitconfig
+++ b/linux/T480/.gitconfig
@@ -16,6 +16,8 @@
     trustExitCode = true
     cmd = open -W -a Meld --args --auto-merge \"$LOCAL\" \"$BASE\" \"$REMOTE\" --output=\"$MERGED\"
 [alias]
+    ; Check for environment variable `LESS` having option "R". If this is enabled,
+    ; automatically many commands will open in less without bloating terminal.
     l = "!log_in_less() { git log --color=always \"$@\" | less -R; }; log_in_less"
     lo = "log --oneline"
     d = "!diff_in_less() { git diff --color=always \"$@\" | less -R; }; diff_in_less"
