--- a/linux/T480/.config/i3/i3blocks.conf
+++ b/linux/T480/.config/i3/i3blocks.conf
@@ -29,11 +29,11 @@ separator_block_width=15
 markup='⟨'
 
 # Module to show current application's name in i3blocks.
-[application]
-command=app_name.sh
-align=left
-interval=1
-color=#FF7585
+# [application]
+# command=app_name.sh
+# align=left
+# interval=1
+# color=#FF7585
 # Volume indicator
 #
 # The first parameter sets the step (and units to display)
