--- a/linux/T480/.inputrc
+++ b/linux/T480/.inputrc
@@ -18,7 +18,7 @@ $if mode=vi
 
     set keymap vi-insert
     Control-l: clear-screen
-    $endif
+$endif
 
-    # Case insensitive auto-completion
-set completion-ignore-case on
+# Case insensitive auto-completion
+# set completion-ignore-case on
