--- a/linux/T480/.inputrc
+++ b/linux/T480/.inputrc
@@ -1,4 +1,4 @@
-# Change this file instead fo /etc/inputrc to change input settings.
+# Change this file instead of /etc/inputrc to change input settings.
 
 # Set vim mode in bash.
 set editing-mode vi
@@ -7,7 +7,7 @@ set editing-mode vi
 # commands to modify these strings.
 # set show-mode-in-prompt on
 
-# Set this to show current mode in prompt comamnd.
+# Set this to show current mode in prompt command.
 # set vi-cmd-mode-string "\1\e[1;31m\2-\1\e[0m\2"
 # set vi-ins-mode-string "\1\e[1;31m\2+\1\e[0m\2"
 
